# ganeti

./: .ghci  .gitignore  .travis.yml  AUTHORS  CONTRIBUTE.md  CONTRIBUTING.md  COPYING  DEVNOTES  Dockerfile.stretch  INSTALL  Makefile  Makefile.am  NEWS  README  README.md  SECURITY  Setup.lhs  UPGRADE  autogen.sh  configure.ac  epydoc.conf  epydoc.conf.in  ganeti.cabal  ganeti.initd  haddock-prologue  hail.1  hail.hs  hbal.1  hbal.hs  hn1.1  hn1.hs  hscan.1  hscan.hs  hscolour.css  hspace.1  hspace.hs  live-test.sh  package.yaml  pydoctor.ini  pylintrc  (+3 more)
doc/: Makefile.am  admin.rst  admin.sgml  arch-2.0.dot  build-rapi-resources-doc  client-api.txt  cluster-keys-replacement.rst  cluster-merge.rst  conf.py  design-2.0-cluster-parameters.rst  design-2.0-commandline-parameters.rst  design-2.0-disk-handling.rst  design-2.0-index.rst  design-2.0-job-queue.rst  design-2.0-locking.rst  design-2.0-master-daemon.rst  design-2.0-os-interface.rst  design-2.0-rapi-changes.rst  design-2.0.rst  design-2.1-lock-acquire.dot  design-2.1-lock-release.dot  design-2.1.rst  design-2.10.rst  design-2.11.rst  design-2.12.rst  design-2.13.rst  design-2.14.rst  design-2.15.rst  design-2.16.rst  design-2.17.rst  design-2.2.rst  design-2.3.rst  design-2.4.rst  design-2.5.rst  design-2.6.rst  design-2.7.rst  design-2.8.rst  design-2.9.rst  design-3.0.rst  design-3.1.rst  (+104 more)
doc/css/: style.css
doc/examples/: Makefile.am  bash_completion.in  basic-oob  batcher-instances.json  dumb-allocator  ganeti-kvm-poweroff.initd.in  ganeti-master-role.ocf.in  ganeti-node-role.ocf.in  ganeti.cron  ganeti.cron.in  ganeti.default  ganeti.default-debug  ganeti.initd.in  ganeti.logrotate.in  gnt-config-backup.in  rapi_testutils.py
doc/examples/gnt-debug/: README  delay0.json  delay50.json  delayR.json
doc/users/: groupmemberships.in  groups.in  users.in
man/: Makefile.am  footer.rst  footer.sgml  ganeti-cleaner.rst  ganeti-cleaner.sgml  ganeti-confd.rst  ganeti-confd.sgml  ganeti-extstorage-interface.rst  ganeti-kvmd.rst  ganeti-listrunner.rst  ganeti-luxid.rst  ganeti-maintd.rst  ganeti-master-cleaner.rst  ganeti-master.sgml  ganeti-masterd.rst  ganeti-masterd.sgml  ganeti-mond.rst  ganeti-noded.rst  ganeti-noded.sgml  ganeti-os-interface.rst  ganeti-os-interface.sgml  ganeti-queryd.rst  ganeti-rapi.rst  ganeti-rapi.sgml  ganeti-watcher.rst  ganeti-watcher.sgml  ganeti-wconfd.rst  ganeti.rst  ganeti.sgml  gnt-backup.rst  gnt-backup.sgml  gnt-cluster.rst  gnt-cluster.sgml  gnt-debug.rst  gnt-debug.sgml  gnt-filter.rst  gnt-group.rst  gnt-instance.rst  gnt-instance.sgml  gnt-job.rst  (+21 more)
test/: Makefile.am  bash_completion.bash  cfgupgrade_unittest.py  check-cert-expired_unittest.bash  cli-test.bash  daemon-util_unittest.bash  docs_unittest.py  ganeti-cleaner_unittest.bash  ganeti-cli.test  ganeti.asyncnotifier_unittest.py  ganeti.backend_unittest-runasroot.py  ganeti.backend_unittest.py  ganeti.bdev_unittest.py  ganeti.cache_unittest.py  ganeti.cli_unittest.py  ganeti.client.gnt_cluster_unittest.py  ganeti.client.gnt_instance_unittest.py  ganeti.client.gnt_job_unittest.py  ganeti.cmdlib_unittest.py  ganeti.compat_unittest.py  ganeti.confd.client_unittest.py  ganeti.confd_client_unittest.py  ganeti.config_unittest.py  ganeti.constants_unittest.py  ganeti.daemon_unittest.py  ganeti.errors_unittest.py  ganeti.hooks_unittest.py  ganeti.ht_unittest.py  ganeti.http_unittest.py  ganeti.hypervisor.hv_chroot_unittest.py  ganeti.hypervisor.hv_fake_unittest.py  ganeti.hypervisor.hv_kvm_unittest.py  ganeti.hypervisor.hv_xen_unittest.py  ganeti.impexpd_unittest.py  ganeti.jqueue_unittest.py  ganeti.jstore_unittest.py  ganeti.locking_unittest.py  ganeti.luxi_unittest.py  ganeti.masterd.iallocator_unittest.py  ganeti.masterd.instance_unittest.py  (+60 more)
test/autotools/: autotools-check-news.test
test/data/: NEWS_OK.txt  NEWS_previous_unreleased.txt  bdev-8.3-both.txt  bdev-both.txt  bdev-disk.txt  bdev-drbd-8.0.txt  bdev-drbd-8.3.txt  bdev-drbd-8.4-no-disk-params.txt  bdev-drbd-8.4.txt  bdev-drbd-net-ip4.txt  bdev-drbd-net-ip6.txt  cert1.pem  cert2.pem  cluster_config_2.10.json  cluster_config_2.11.json  cluster_config_2.12.json  cluster_config_2.13.json  cluster_config_2.14.json  cluster_config_2.15.json  cluster_config_2.16.json  cluster_config_2.17.json  cluster_config_2.18.json  cluster_config_2.7.json  cluster_config_2.8.json  cluster_config_2.9.json  cluster_config_3.0.json  cluster_config_3.1.json  cluster_config_downgraded_2.7.json  instance-disks.txt  instance-minor-pairing.txt  instance-prim-sec.txt  ip-addr-show-dummy0.txt  ip-addr-show-lo-ipv4.txt  ip-addr-show-lo-ipv6.txt  ip-addr-show-lo-oneline-ipv4.txt  ip-addr-show-lo-oneline-ipv6.txt  ip-addr-show-lo-oneline.txt  ip-addr-show-lo.txt  kvm_0.12.5_help.txt  kvm_0.15.90_help.txt  (+36 more)
test/hs/: cli-tests-defs.sh  hpc-htools.hs  hpc-mon-collector.hs  htest.hs  live-test.sh  offline-test.sh
test/py/: __init__.py  cfgupgrade_unittest.py  check-cert-expired_unittest.bash  cli-test.bash  daemon-util_unittest.bash  docs_unittest.py  ganeti-cleaner_unittest.bash  ganeti-cli.test  ganeti.asyncnotifier_unittest.py  ganeti.backend_unittest-runasroot.py  ganeti.backend_unittest.py  ganeti.bdev_unittest.py  ganeti.block.bdev_unittest.py  ganeti.block.drbd_unittest.py  ganeti.bootstrap_unittest.py  ganeti.cli_opts_unittest.py  ganeti.cli_unittest.py  ganeti.client.gnt_cluster_unittest.py  ganeti.client.gnt_instance_unittest.py  ganeti.client.gnt_job_unittest.py  ganeti.cmdlib.cluster_unittest.py  ganeti.cmdlib.common_unittest.py  ganeti.cmdlib.instance_storage_unittest.py  ganeti.cmdlib_unittest.py  ganeti.compat_unittest.py  ganeti.confd.client_unittest.py  ganeti.config_unittest.py  ganeti.constants_unittest.py  ganeti.container_unittest.py  ganeti.daemon_unittest.py  ganeti.errors_unittest.py  ganeti.hooks_unittest.py  ganeti.ht_unittest.py  ganeti.http_unittest.py  ganeti.hypervisor.hv_chroot_unittest.py  ganeti.hypervisor.hv_fake_unittest.py  ganeti.hypervisor.hv_kvm_unittest.py  ganeti.hypervisor.hv_lxc_unittest.py  ganeti.hypervisor.hv_xen_unittest.py  ganeti.hypervisor_unittest.py  (+75 more)
(+1135 files in other folders)
